[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
http = "1.2.0"
pingora = { version = "0.4.0", features = ["proxy"] }
pingora-core = "0.4.0"
pingora-http = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
