[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
async-trait = "0.1.83"
http = "1.2.0"
pingora = { version = "0.4.0", features = ["proxy"] }
pingora-core = { version = "0.4.0", features = ["rustls"] }
pingora-http = "0.4.0"
pingora-load-balancing = { version = "0.4.0", features = ["rustls"] }
pingora-proxy = { version = "0.4.0", features = ["rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
