[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false 

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
hashbrown = "0.15.2"
http = "1.2.0"
log = "0.4.22"
pingora = { version = "0.4.0", features = ["proxy"] }
pingora-core = { version = "0.4.0", features = ["rustls"] }
pingora-http = "0.4.0"
pingora-load-balancing = { version = "0.4.0", features = ["rustls"] }
pingora-proxy = { version = "0.4.0", features = ["rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
syntect = "5.2.0"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.19"
tree-sitter = "0.24.6"
tree-sitter-highlight = "0.24.6"
tree-sitter-toml = {git = "https://github.com/scvalex/tree-sitter-toml"}
url = "2.5.4"
